# sweOS

./: .dockerignore  .gitignore  DatabaseSchema.md  Dockerfile.backend  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: analytics.py  auth.py  cvs.py  dashboard.py  dependencies.py  exercises.py  goals.py  ingestion.py  jobs.py  learning.py  preferences.py  profile.py  profile_defaults.py  router.py  skills.py
app/core/: bootstrap.py  config.py  security.py  tokens.py
app/db/: leetcode_catalog.py  metadata.py  seeds.py  session.py
docs/: AI.md  API.md  DatabaseSchema.md  EpicsAndUserStories.md  FunReq.md  NonFunReq.md  sweos-ingestion-worker-engine-spec.md
frontend/: Dockerfile  package-lock.json  package.json
migrations/: env.py
tests/: conftest.py  db_utils.py  migration_utils.py  test_analytics_api.py  test_analytics_integration.py  test_auth_api.py  test_auth_integration.py  test_bootstrap.py  test_bootstrap_epic1_script.py  test_create_tables_script.py  test_cvs_integration.py  test_dashboard_api.py  test_dashboard_integration.py  test_exercise_engine.py  test_exercises_api.py  test_exercises_integration.py  test_goals_api.py  test_goals_integration.py  test_ingestion_api.py  test_ingestion_engine.py  test_ingestion_parsers.py  test_jobs_integration.py  test_learning_api.py  test_leetcode_runtime.py  test_migrations.py  test_preferences_api.py  test_preferences_integration.py  test_profile_api.py  test_profile_integration.py  test_seed_default_user_script.py  test_seed_leetcode_exercises_script.py  test_seed_skill_catalog_script.py  test_seeds.py  test_skills_api.py  test_skills_integration.py
(+78 files in other folders)
