[project]
name = "sweos"
version = "0.1.0"
description = "FastAPI backend for sweOS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.14.1",
  "fastapi==0.115.12",
  "psycopg[binary]==3.2.3",
  "pydantic-settings==2.6.1",
  "sqlalchemy==2.0.36",
  "uvicorn[standard]==0.32.1",
]

[project.optional-dependencies]
dev = [
  "httpx==0.27.2",
  "pytest==8.3.5",
]

[project.scripts]
sweos-create-tables = "app.scripts.create_tables:main"
sweos-seed-default-user = "app.scripts.seed_default_user:main"
sweos-seed-skill-catalog = "app.scripts.seed_skill_catalog:main"
sweos-bootstrap-epic1 = "app.scripts.bootstrap_epic1:main"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that require a running Postgres database",
]
